--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -38,7 +38,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:srcCompat="@mipmap/ic_launcher"
-                android:id="@+id/imageView"
+                android:id="@+id/poster_imageview"
                 android:layout_weight="0.4" />
 
             <LinearLayout
@@ -95,7 +95,8 @@
             android:textColor="#FFFFFF"
             android:textSize="20sp"
             android:padding="20dp"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_gravity="center_horizontal"
+            android:onClick="addOrRemove"/>
 
     </LinearLayout>
 
