--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -39,7 +39,8 @@
                 android:layout_height="wrap_content"
                 app:srcCompat="@mipmap/ic_launcher"
                 android:id="@+id/poster_imageview"
-                android:layout_weight="0.4" />
+                android:layout_weight="0.4"
+                android:contentDescription="" />
 
             <LinearLayout
                 android:orientation="vertical"
