HttpRequestHelper doesn't recognize the params (title string) I'm giving it. Help.

--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -97,7 +97,7 @@
             android:textSize="20sp"
             android:padding="20dp"
             android:layout_gravity="center_horizontal"
-            android:onClick="addOrRemove"/>
+            android:onClick="addRemove"/>
 
     </LinearLayout>
 
